# pipit-keyboard

./: .gitignore  Cargo.toml  LICENSE  README.md  README.org  rustfmt.toml  settings.toml
extras/: pipit-mode.el
extras/audio/: audio_feedback.py  make_audio_files.py
keymaps/: dvorak24.kmap  dvorak24_evan.kmap  dvorak24_left.kmap  dvorak24_onehand.kmap  gaming_test.kmap  krita.kmap
pipit-firmware/: Battery.cpp  Battery.h  BitArray.h  BitSlice.h  Chord.cpp  Chord.h  Comms.cpp  Comms.h  Entry.cpp  Entry.h  FeatherComms.cpp  FeatherComms.h  Feedback.cpp  Feedback.h  History.cpp  History.h  Key.cpp  Key.h  Lookup.cpp  Lookup.h  Matrix.cpp  Matrix.h  OneShot.cpp  OneShot.h  OneShotFeather.cpp  OneShotTeensy.cpp  Pipit.cpp  Pipit.h  Queue.cpp  Queue.h  Report.cpp  Report.h  Ring.cpp  Ring.h  Scanner.cpp  Scanner.h  Sender.cpp  Sender.h  SixKeys.cpp  SixKeys.h  (+22 more)
rusty-firmware/: Battery.h  Chord.cpp  Chord.h  Comms.cpp  Comms.h  Feedback.cpp  Feedback.h  History.cpp  Lookup.cpp  Lookup.h  Matrix.h  Pipit.cpp  Pipit.h  Sender.cpp  Sender.h  Switches.cpp  Switches.h  WordHistory.cpp  WordHistory.h
settings/: cheatsheet.toml  cheatsheet_full.toml  cheatsheet_full.yaml  settings.toml  settings.yaml  settings_evan.toml  settings_evan.yaml
settings/cheatsheet/: cheatsheet.yaml  cheatsheet_full.yaml
src/: arduino.rs  c_array.rs  chord.rs  compression.rs  error.rs  key_types.rs  lib.rs  main.rs  maps.rs  options.rs  parser.rs  sequence.rs  settings.rs  settings.toml  toml_convertor.rs  toml_loader.rs  util.rs  words.rs  write.rs
tests/: integration-tests.rs
(+186 files in other folders)
