[package]
name = "pipit-config"
version = "0.1.0"
authors = ["em <e.r.matteson@gmail.com>"]

[[bin]]
name = "main"
path = "src/main.rs"
doc = false

[dependencies]
time = "0.1"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
itertools = "0.5"
error-chain = "0.10"
cursive = "0.7"
unicode-segmentation = "1.2"
lazy_static = "0.2"
natord = "*"
svg =  "0.5"
